--- a/JFX_UI/src/jfx/ui/DashboardScreenComp/DashboardScreenComp.fxml
+++ b/JFX_UI/src/jfx/ui/DashboardScreenComp/DashboardScreenComp.fxml
@@ -7,6 +7,7 @@
 <ScrollPane xmlns="http://javafx.com/javafx/24.0.1"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="jfx.ui.DashboardScreenComp.DashboardScreenCompController"
+            stylesheets="@../MainComp/MainCompCSS.css, @DashboardScreenCSS.css"
             fitToHeight="true" fitToWidth="true">
     <content>
         <BorderPane minHeight="400.0" minWidth="900.0" prefHeight="600.0" prefWidth="1000.0">
