--- a/JFX_UI/src/jfx/ui/ExecutionComp/ExecutionComp.fxml
+++ b/JFX_UI/src/jfx/ui/ExecutionComp/ExecutionComp.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.geometry.Insets?>
 
-<VBox alignment="CENTER" minHeight="200.0" minWidth="250.0" maxWidth="400.0" prefWidth="350.0" prefHeight="280.0" spacing="4.0" styleClass="execution-vbox" stylesheets="@ExecutionCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ExecutionComp.ExecutionCompController">
+<VBox alignment="CENTER" minHeight="200.0" minWidth="250.0" maxWidth="400.0" prefWidth="350.0" prefHeight="280.0" spacing="4.0" styleClass="execution-vbox" stylesheets="@../MainComp/MainCompCSS.css, @ExecutionCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ExecutionComp.ExecutionCompController">
     <children>
         <HBox alignment="CENTER" spacing="8.0" prefHeight="34.0">
             <children>
@@ -50,7 +50,7 @@
                 </VBox>
                 <VBox HBox.hgrow="ALWAYS" spacing="3.0">
                     <children>
-                        <ComboBox fx:id="architectureSelectionComboBox" prefWidth="200.0" promptText="Architecture Selection" maxWidth="Infinity" VBox.vgrow="NEVER" />
+                        <ComboBox fx:id="architectureSelectionComboBox" prefWidth="220.0" promptText="Architecture" maxWidth="Infinity" VBox.vgrow="NEVER" />
                         <fx:include fx:id="inputVarsComp" source="../VariableInputsTableView/VariableInputsTableView.fxml" VBox.vgrow="ALWAYS" />
                         <Button fx:id="backToDashboardButton" mnemonicParsing="false" onAction="#onBackToDashboard" text="Back to Dashboard" prefHeight="35.0" maxWidth="Infinity" styleClass="success" VBox.vgrow="NEVER" />
                     </children>
