--- a/JFX_UI/src/jfx/ui/LoginComp/LoginComp.fxml
+++ b/JFX_UI/src/jfx/ui/LoginComp/LoginComp.fxml
@@ -12,7 +12,7 @@
 <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
           minHeight="400.0" minWidth="500.0"
           prefHeight="600.0" prefWidth="800.0"
-          style="-fx-background-color: #f4f4f4;"
+          stylesheets="@../MainComp/MainCompCSS.css, @LoginCompCSS.css"
           xmlns="http://javafx.com/javafx/21"
           xmlns:fx="http://javafx.com/fxml/1"
           fx:controller="jfx.ui.LoginComp.LoginCompController">
@@ -47,22 +47,15 @@
     </rowConstraints>
 
     <children>
-        <Label text="S-Emulator"
+        <Label fx:id="mainTitleLabel" text="S-Emulator"
                GridPane.columnIndex="3" GridPane.columnSpan="5"
                GridPane.rowIndex="2" GridPane.rowSpan="2"
-               GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-            <font>
-                <Font name="System Bold" size="42.0" />
-            </font>
-        </Label>
+               GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
 
-        <Label text="Username:"
+        <Label fx:id="usernamePromptLabel" text="Username:"
                GridPane.columnIndex="3" GridPane.columnSpan="5"
                GridPane.rowIndex="5"
                GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
-            <font>
-                <Font size="18.0" />
-            </font>
             <GridPane.margin>
                 <Insets bottom="5.0" />
             </GridPane.margin>
@@ -83,7 +76,6 @@
                 text="Login"
                 onAction="#onLogin"
                 prefHeight="45.0" prefWidth="150.0"
-                style="-fx-background-color: #2196F3; -fx-text-fill: white; -fx-font-size: 18px; -fx-font-weight: bold; -fx-cursor: hand;"
                 GridPane.columnIndex="4" GridPane.columnSpan="3"
                 GridPane.rowIndex="8"
                 GridPane.halignment="CENTER" GridPane.valignment="CENTER">
