--- a/JFX_UI/src/jfx/ui/MainComp/MainComp.fxml
+++ b/JFX_UI/src/jfx/ui/MainComp/MainComp.fxml
@@ -9,14 +9,12 @@
 <BorderPane xmlns="http://javafx.com/javafx/24.0.1"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="jfx.ui.MainComp.MainCompController"
+            stylesheets="@MainCompCSS.css"
             prefHeight="950.0" prefWidth="1400.0">
 
     <!-- Top: Header with username, screen name, and credits -->
     <top>
-        <HBox spacing="20" alignment="CENTER" BorderPane.alignment="CENTER">
-            <padding>
-                <Insets top="10" right="20" bottom="10" left="20"/>
-            </padding>
+        <HBox styleClass="top-header-bar" spacing="20" alignment="CENTER" BorderPane.alignment="CENTER">
 
             <!-- Left: Username Label -->
             <Label fx:id="usernameLabel" text="Username: Guest" HBox.hgrow="NEVER"/>
