--- a/JFX_UI/src/jfx/ui/ProgramsInfoTableView/ProgramsInfoTableView.fxml
+++ b/JFX_UI/src/jfx/ui/ProgramsInfoTableView/ProgramsInfoTableView.fxml
@@ -5,15 +5,16 @@
 
 <TableView xmlns="http://javafx.com/javafx/24.0.1"
            xmlns:fx="http://javafx.com/fxml/1"
+           stylesheets="@../MainComp/MainCompCSS.css"
            fx:controller="jfx.ui.ProgramsInfoTableView.ProgramsInfoTableViewController"
            fx:id="table" prefWidth="700.0" prefHeight="400.0">
     <columns>
-        <TableColumn fx:id="nameCol" text="Name" minWidth="80.0" maxWidth="1.7976931348623157E308" prefWidth="100.0"/>
-        <TableColumn fx:id="uploadUserNameCol" text="Uploaded By" minWidth="80.0" maxWidth="1.7976931348623157E308" prefWidth="100.0"/>
-        <TableColumn fx:id="instructionCountCol" text="Instructions" minWidth="80.0" maxWidth="80.0" prefWidth="80.0"/>
-        <TableColumn fx:id="maxDegreeCol" text="Max Degree" minWidth="85.0" maxWidth="85.0" prefWidth="85.0"/>
-        <TableColumn fx:id="executionsCol" text="Executions" minWidth="75.0" maxWidth="75.0" prefWidth="75.0"/>
-        <TableColumn fx:id="avgCreditCol" text="Avg Credit" minWidth="75.0" maxWidth="75.0" prefWidth="75.0"/>
+        <TableColumn fx:id="nameCol" text="Name" minWidth="60.0" maxWidth="1.7976931348623157E308" prefWidth="90.0"/>
+        <TableColumn fx:id="uploadUserNameCol" text="Uploaded By" minWidth="60.0" maxWidth="1.7976931348623157E308" prefWidth="80.0"/>
+        <TableColumn fx:id="instructionCountCol" text="Instruc-&#10;tions" minWidth="55.0" maxWidth="55.0" prefWidth="55.0"/>
+        <TableColumn fx:id="maxDegreeCol" text="Max&#10;Degree" minWidth="55.0" maxWidth="55.0" prefWidth="55.0"/>
+        <TableColumn fx:id="executionsCol" text="Execu-&#10;tions" minWidth="55.0" maxWidth="55.0" prefWidth="55.0"/>
+        <TableColumn fx:id="avgCreditCol" text="Avg&#10;Credit" minWidth="55.0" maxWidth="55.0" prefWidth="55.0"/>
     </columns>
     <columnResizePolicy>
         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
