--- a/JFX_UI/src/jfx/ui/UserInfoTableView/UserInfoTableView.fxml
+++ b/JFX_UI/src/jfx/ui/UserInfoTableView/UserInfoTableView.fxml
@@ -10,6 +10,7 @@
 
 <VBox xmlns="http://javafx.com/javafx/24.0.1"
       xmlns:fx="http://javafx.com/fxml/1"
+      stylesheets="@../MainComp/MainCompCSS.css, @UserInfoTableViewCSS.css"
       fx:controller="jfx.ui.UserInfoTableView.UserInfoTableViewController"
       spacing="5" fillWidth="true" style="-fx-border-color: #cccccc; -fx-border-width: 1;">
     <padding>
@@ -18,7 +19,7 @@
 
     <!-- Header -->
     <HBox alignment="CENTER" spacing="5">
-        <Label text="Available Users" style="-fx-font-size: 14px; -fx-font-weight: bold;"/>
+        <Label text="Available Users" styleClass="table-title-label"/>
     </HBox>
 
     <!-- Unselect button -->
@@ -32,12 +33,12 @@
     <!-- Table -->
     <TableView fx:id="usersTable" VBox.vgrow="ALWAYS">
         <columns>
-            <TableColumn fx:id="userNameColumn" text="Name" minWidth="80.0" maxWidth="1.7976931348623157E308" prefWidth="70.0"/>
-            <TableColumn fx:id="uploadedProgramsColumn" text="Programs" minWidth="73.0" maxWidth="73.0" prefWidth="73.0"/>
-            <TableColumn fx:id="uploadedFunctionsColumn" text="Functions" minWidth="80.0" maxWidth="80.0" prefWidth="80.0"/>
-            <TableColumn fx:id="currentCreditsColumn" text="Credits" minWidth="65.0" maxWidth="65.0" prefWidth="65.0"/>
-            <TableColumn fx:id="usedCreditsColumn" text="Used" minWidth="60.0" maxWidth="60.0" prefWidth="60.0"/>
-            <TableColumn fx:id="executionsColumn" text="Execs" minWidth="60.0" maxWidth="60.0" prefWidth="60.0"/>
+            <TableColumn fx:id="userNameColumn" text="Name" minWidth="50.0" maxWidth="80.0" prefWidth="60.0"/>
+            <TableColumn fx:id="uploadedProgramsColumn" text="Prog-&#10;rams" minWidth="50.0" maxWidth="50.0" prefWidth="50.0"/>
+            <TableColumn fx:id="uploadedFunctionsColumn" text="Func-&#10;tions" minWidth="50.0" maxWidth="50.0" prefWidth="50.0"/>
+            <TableColumn fx:id="currentCreditsColumn" text="Credits" minWidth="60.0" maxWidth="1.7976931348623157E308" prefWidth="70.0"/>
+            <TableColumn fx:id="usedCreditsColumn" text="Used" minWidth="50.0" maxWidth="1.7976931348623157E308" prefWidth="55.0"/>
+            <TableColumn fx:id="executionsColumn" text="Execs" minWidth="50.0" maxWidth="1.7976931348623157E308" prefWidth="55.0"/>
         </columns>
         <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
