--- a/JFX_UI/src/jfx/ui/ViewComp/ViewComp.fxml
+++ b/JFX_UI/src/jfx/ui/ViewComp/ViewComp.fxml
@@ -6,10 +6,13 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 <?import javafx.geometry.Insets?>
 
-<SplitPane dividerPositions="0.7" minHeight="300.0" minWidth="500.0" orientation="VERTICAL" prefHeight="500.0" prefWidth="650.0" stylesheets="@ViewCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ViewComp.ViewCompController">
+<SplitPane dividerPositions="0.7" minHeight="300.0" minWidth="500.0" orientation="VERTICAL" prefHeight="500.0" prefWidth="650.0"
+           stylesheets="@../MainComp/MainCompCSS.css, @ViewCompCSS.css"
+           xmlns="http://javafx.com/javafx/24.0.1"
+           xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="jfx.ui.ViewComp.ViewCompController">
     <items>
         <VBox prefHeight="200.0" prefWidth="100.0" spacing="3.0" fillWidth="true">
             <children>
@@ -25,21 +28,9 @@
 
                 <HBox spacing="10.0" alignment="CENTER" prefHeight="32.0">
                     <children>
-                        <Button fx:id="collapseButton" mnemonicParsing="false" onAction="#handleCollapse" prefWidth="85.0" text="Collapse" HBox.hgrow="ALWAYS" maxWidth="100.0">
-                            <font>
-                                <Font size="11.0" />
-                            </font>
-                        </Button>
-                        <Label id="CurrMaxlbl" fx:id="currMaxDegreeLabel" prefWidth="100.0" text="Current\Max degree" alignment="CENTER" HBox.hgrow="ALWAYS" maxWidth="120.0">
-                            <font>
-                                <Font size="11.0" />
-                            </font>
-                        </Label>
-                        <Button fx:id="expandButton" mnemonicParsing="false" onAction="#handleExpand" prefWidth="85.0" text="Expand" HBox.hgrow="ALWAYS" maxWidth="100.0">
-                            <font>
-                                <Font size="11.0" />
-                            </font>
-                        </Button>
+                        <Button fx:id="collapseButton" mnemonicParsing="false" onAction="#handleCollapse" prefWidth="85.0" text="Collapse" HBox.hgrow="ALWAYS" maxWidth="100.0" />
+                        <Label id="CurrMaxlbl" fx:id="currMaxDegreeLabel" prefWidth="100.0" text="Current\Max degree" alignment="CENTER" HBox.hgrow="ALWAYS" maxWidth="120.0" />
+                        <Button fx:id="expandButton" mnemonicParsing="false" onAction="#handleExpand" prefWidth="85.0" text="Expand" HBox.hgrow="ALWAYS" maxWidth="100.0" />
                     </children>
                     <padding>
                         <Insets left="5.0" right="5.0" top="2.0" bottom="2.0" />
@@ -48,7 +39,7 @@
 
                 <fx:include fx:id="instructionsTable" source="../InstructionTableView/instructionsTable.fxml" VBox.vgrow="ALWAYS" />
 
-                <HBox fx:id="summeryLineLabel" alignment="CENTER" id="summaryLbl" style="-fx-background-color: #f8f9fa;">
+                <HBox fx:id="summeryLineLabel" alignment="CENTER" id="summaryLineLabel" styleClass="summary-line-hbox">
                     <padding>
                         <Insets left="5.0" right="5.0" top="3.0" bottom="3.0" />
                     </padding>
